--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
 	"name": "pingmydyno",
 	"version": "1.0.0",
 	"description": "Keep your Heroku free dyno awake forever",
-	"keywords": [],
+	"keywords": [
+		"dyno",
+		"heroku",
+		"keep alive",
+		"ping",
+		"sleep",
+		"wake"
+	],
 	"homepage": "https://github.com/codeshifu/pingmydyno#readme",
 	"bugs": {
 		"url": "https://github.com/codeshifu/pingmydyno/issues"
@@ -20,6 +27,9 @@
 		"dev": "node build/index.js",
 		"start": "npm-run-all clean build dev"
 	},
+	"dependencies": {
+		"is-reachable": "3.0.0"
+	},
 	"devDependencies": {
 		"@babel/cli": "7.2.3",
 		"@babel/core": "7.4.0",
@@ -27,11 +37,14 @@
 		"@babel/plugin-proposal-object-rest-spread": "7.4.0",
 		"@babel/preset-env": "7.4.2",
 		"@babel/preset-typescript": "7.3.3",
+		"@typescript-eslint/eslint-plugin": "1.5.0",
+		"@typescript-eslint/parser": "1.5.0",
+		"eslint": "5.15.3",
+		"eslint-config-airbnb-base": "13.1.0",
+		"eslint-plugin-import": "2.16.0",
 		"nodemon": "1.18.10",
 		"npm-run-all": "4.1.5",
 		"rimraf": "2.6.3",
-		"tslint": "5.14.0",
-		"tslint-config-airbnb": "5.11.1",
 		"typescript": "3.3.3"
 	}
 }
