--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
 	},
 	"license": "ISC",
 	"author": "Luqman Olushi <olushilukmon03@gmail.com> (https://codeshifu.github.io/)",
-	"main": "build/index.js",
+	"files": [
+		"dist",
+		"README.md",
+		"LICENSE.md"
+	],
+	"main": "dist/pingmydyno.js",
+	"module": "dist/pingmydyno.es.js",
 	"scripts": {
 		"build": "babel lib --out-dir build --extensions .ts",
-		"clean": "rimraf build",
+		"bundle": "npm-run-all clean rollup",
+		"clean": "rimraf build dist",
 		"dev": "node build/index.js",
+		"rollup": "rollup -c",
 		"start": "npm-run-all clean build dev"
 	},
 	"dependencies": {
@@ -45,6 +53,11 @@
 		"nodemon": "1.18.10",
 		"npm-run-all": "4.1.5",
 		"rimraf": "2.6.3",
+		"rollup": "1.7.3",
+		"rollup-plugin-babel": "4.3.2",
+		"rollup-plugin-eslint": "5.1.0",
+		"rollup-plugin-terser": "4.0.4",
+		"rollup-plugin-typescript": "1.0.1",
 		"typescript": "3.3.3"
 	}
 }
