--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pingmydyno",
 	"version": "1.0.0",
-	"description": "Keep your Heroku free dyno awake forever",
+	"description": "Keep Heroku dynos awake forever",
 	"keywords": [
 		"dyno",
 		"heroku",
@@ -32,6 +32,7 @@
 		"bundle": "npm-run-all clean rollup",
 		"clean": "rimraf build dist",
 		"dev": "node build/index.js",
+		"release": "np",
 		"rollup": "rollup -c",
 		"start": "npm-run-all clean build dev"
 	},
@@ -51,6 +52,7 @@
 		"eslint-config-airbnb-base": "13.1.0",
 		"eslint-plugin-import": "2.16.0",
 		"nodemon": "1.18.10",
+		"np": "4.0.2",
 		"npm-run-all": "4.1.5",
 		"rimraf": "2.6.3",
 		"rollup": "1.7.3",
