--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pingmydyno",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "Keep Heroku dynos awake forever",
 	"keywords": [
 		"dyno",
@@ -21,9 +21,7 @@
 	"license": "ISC",
 	"author": "Luqman Olushi <olushilukmon03@gmail.com> (https://codeshifu.github.io/)",
 	"files": [
-		"dist",
-		"README.md",
-		"LICENSE.md"
+		"dist"
 	],
 	"main": "dist/pingmydyno.js",
 	"module": "dist/pingmydyno.es.js",
