--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "pingmydyno",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"description": "Keep Heroku dynos awake forever",
 	"keywords": [
 		"dyno",
 		"heroku",
-		"keep alive",
+		"keep-alive",
 		"ping",
 		"sleep",
 		"wake"
