--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,15 +10,12 @@
   "commit": true,
   "contributors": [
     {
-      "login": "codeshifu",
-      "name": "Luqman Olushi O.",
-      "avatar_url": "https://avatars0.githubusercontent.com/u/5154605?v=4",
-      "profile": "https://twitter.com/codeshifu",
+      "login": "akhilome",
+      "name": "Kizito Akhilome",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/15332525?v=4",
+      "profile": "https://akhilo.me",
       "contributions": [
-        "code",
-        "doc",
-        "example",
-        "maintenance"
+        "code"
       ]
     }
   ],
