--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,18 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "codeshifu",
+      "name": "Luqman Olushi O.",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/5154605?v=4",
+      "profile": "https://twitter.com/codeshifu",
+      "contributions": [
+        "bug",
+        "code",
+        "doc",
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
