--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-	"name": "pingmydyno",
-	"version": "1.5.0",
-	"description": "Keep Heroku dynos awake forever",
-	"keywords": [
-		"dyno",
-		"heroku",
-		"keep-alive",
-		"ping",
-		"sleep",
-		"wake"
-	],
-	"homepage": "https://github.com/codeshifu/pingmydyno#readme",
-	"bugs": {
-		"url": "https://github.com/codeshifu/pingmydyno/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/codeshifu/pingmydyno.git"
-	},
-	"license": "ISC",
-	"author": "Luqman Olushi <olushilukmon03@gmail.com> (https://codeshifu.github.io/)",
-	"files": [
-		"dist"
-	],
-	"main": "dist/pingmydyno.js",
-	"module": "dist/pingmydyno.es.js",
-	"scripts": {
-		"add-contributor": "all-contributors add",
-		"build": "babel lib --out-dir build --extensions .ts",
-		"bundle": "npm-run-all clean rollup",
-		"clean": "rimraf build dist",
-		"dev": "node build/index.js",
-		"release": "npm run rollup && np",
-		"rollup": "rollup -c",
-		"start": "npm-run-all clean build dev"
-	},
-	"dependencies": {
-		"is-reachable": "3.0.0"
-	},
-	"devDependencies": {
-		"@babel/cli": "7.2.3",
-		"@babel/core": "7.4.0",
-		"@babel/plugin-proposal-class-properties": "7.4.0",
-		"@babel/plugin-proposal-object-rest-spread": "7.4.0",
-		"@babel/preset-env": "7.4.2",
-		"@babel/preset-typescript": "7.3.3",
-		"@typescript-eslint/eslint-plugin": "1.5.0",
-		"@typescript-eslint/parser": "1.5.0",
-		"all-contributors-cli": "6.2.0",
-		"eslint": "5.15.3",
-		"eslint-config-airbnb-base": "13.1.0",
-		"eslint-plugin-import": "2.16.0",
-		"nodemon": "1.18.10",
-		"np": "4.0.2",
-		"npm-run-all": "4.1.5",
-		"rimraf": "2.6.3",
-		"rollup": "1.7.3",
-		"rollup-plugin-babel": "4.3.2",
-		"rollup-plugin-eslint": "5.1.0",
-		"rollup-plugin-terser": "4.0.4",
-		"rollup-plugin-typescript": "1.0.1",
-		"typescript": "3.3.3"
-	}
+  "name": "pingmydyno",
+  "version": "1.5.0",
+  "description": "Keep Heroku dynos awake forever",
+  "keywords": [
+    "dyno",
+    "heroku",
+    "keep-alive",
+    "ping",
+    "sleep",
+    "wake"
+  ],
+  "homepage": "https://github.com/codeshifu/pingmydyno#readme",
+  "bugs": {
+    "url": "https://github.com/codeshifu/pingmydyno/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeshifu/pingmydyno.git"
+  },
+  "license": "ISC",
+  "author": "Luqman Olushi <olushilukmon03@gmail.com> (https://codeshifu.github.io/)",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/pingmydyno.js",
+  "module": "dist/pingmydyno.es.js",
+  "scripts": {
+    "add-contributor": "all-contributors add",
+    "build": "babel lib --out-dir build --extensions .ts",
+    "bundle": "npm-run-all clean rollup",
+    "clean": "rimraf build dist",
+    "dev": "node build/index.js",
+    "rollup": "rollup -c",
+    "release": "np",
+    "start": "npm-run-all clean build dev"
+  },
+  "dependencies": {
+    "is-reachable": "3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@babel/preset-env": "7.4.2",
+    "@babel/preset-typescript": "7.3.3",
+    "@typescript-eslint/eslint-plugin": "1.5.0",
+    "@typescript-eslint/parser": "1.5.0",
+    "all-contributors-cli": "6.2.0",
+    "eslint": "5.15.3",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "nodemon": "1.18.10",
+    "np": "3.1.0",
+    "npm-run-all": "4.1.5",
+    "rimraf": "2.6.3",
+    "rollup": "1.7.3",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-eslint": "5.1.0",
+    "rollup-plugin-terser": "4.0.4",
+    "rollup-plugin-typescript": "1.0.1",
+    "typescript": "3.3.3"
+  }
 }
